plugins/kubesvc/clouddriver-grpc-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spin
    cluster: spin-clouddriver
  name: spin-clouddriver-grpc
spec:
  clusterIP: None
  ports:
    - name: grpc
      port: 9091
      protocol: TCP
      targetPort: 9091
  selector:
    app: spin
    cluster: spin-clouddriver
