plugins/kubesvc/envoy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
      app: spin
      cluster: spin-envoy
  name: spin-envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spin
      cluster: spin-envoy
  template:
    metadata:
      labels:
        app: spin
        cluster: spin-envoy
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy-alpine:v1.17.2
        command: ["envoy", "--config-path","/etc/envoy/envoy.yaml","-l","trace","--bootstrap-version","2"]
        # args: ["bootstrap-version", "2"]
        ports:
        - name: envoyport
          containerPort: 8081
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /etc/envoy
      volumes:
      - name: config
        configMap:
          name: envoy-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spin
    cluster: spin-envoy
  name: spin-envoy-proxy
spec:
  ports:
    - name: envoyrpc
      port: 9091
      protocol: TCP
      targetPort: 8081
  selector:
    app: spin
    cluster: spin-envoy
