plugins/kubesvc/envoy.yaml
# envoy --config-path envoy.yaml -l trace --bootstrap-version 2
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8081 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                access_log:
                  name: envoy.file_access_log
                  typed_config:
                    '@type': type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
                    path: /dev/stdout
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: http
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                            grpc: {}
                          route:
                            cluster: clouddriver-grpc
                            timeout: 3600s
                http_filters:
                  - name: envoy.health_check
                    config:
                      pass_through_mode: false
                      headers:
                        - name: ":path"
                          exact_match: "/healthz"
                        - name: "x-envoy-livenessprobe"
                          exact_match: "healthz"
                  - name: envoy.filters.http.grpc_stats
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
                      stats_for_all_methods: true
                      enable_upstream_stats: true
                  - name: envoy.filters.http.router
  clusters:
    - name: clouddriver-grpc
      connect_timeout: 0.5s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: clouddriver-grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: spin-clouddriver-grpc
                      port_value: 9091
      health_checks:
        timeout: 1s
        interval: 30s
        unhealthy_threshold: 2
        healthy_threshold: 2
        grpc_health_check: {}
